# voicenotes-web

./: .dockerignore  .env.deploy.example  .env.example  .env.publish.example  .gitignore  .prettierignore  .prettierrc.js  Dockerfile  Dockerfile.webapp  Dockerfile.whisper  README.md  biome.json  compose.webapp.yaml  compose.yaml  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
app/: astro.config.ts  package.json
app/prisma/: schema.prisma  seed.ts
app/src/: env.d.ts  middleware.ts
app/src/app/: page.tsx
app/src/components/: app-wrapper.tsx  invitations.tsx  navigation.tsx  page-header.tsx
app/src/hooks/: router.ts  swup.ts
app/src/layouts/: Layout.astro
app/src/lib/: auth.ts  deferred.ts  invitations.ts  prisma-migration.ts  prisma-seed.ts  prisma.ts  startup.ts  transcription-revise.ts  transcription-segmentation.ts  transcription.ts  utils-server.ts  utils.ts
app/src/pages/: 404.astro  500.astro  account.astro  dashboard.astro  index.astro  (+3 more)
nextjs/: package.json
patches/: rollup.patch
prisma/: schema.prisma  seed.ts
python/: pyproject.toml  server.py  transcribe.py  utils.py  whisper.py
scripts/: deploy-whisper.ts  publish-webapp.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: invitations.tsx  navigation.tsx
src/hooks/: auth-admin.ts
src/lib/: auth-client.ts  auth.ts  bcrypt.ts  deferred.ts  faster-whisper.ts  invitations.ts  prisma.ts  startup.ts  transcription.ts  utils-server.ts  utils.ts
src/trpc/: init.ts  router.ts  server.tsx
src/types/: transcription.ts
(+98 files in other folders)
