[project]
name = "voicenotes-monorepo"
version = "0.1.0"
requires-python = ">=3.9"

[tool.uv]
dev-dependencies = [
  "autoflake",
  "ipykernel",
  "ipywidgets",
  "isort",
  "nbformat",
  "yapf",
]

[tool.uv.workspace]
members = ["python"]

[tool.yapf]
based_on_style = "yapf"
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 1
column_limit = 160
join_multiple_lines = true
