[project]
name = "voicenotes-whisper"
version = "0.1.0"
description = "Local transcription service using faster-whisper"
requires-python = ">=3.9"
dependencies = ["click", "faster-whisper"]

[tool.uv]
dev-dependencies = [
  "autoflake",
  "ipykernel",
  "ipywidgets",
  "isort",
  "nbformat",
  "yapf",
]

[tool.yapf]
based_on_style = "yapf"
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 1
column_limit = 160
join_multiple_lines = true
